src/test/ui/keyword/extern/keyword-extern-as-identifier-pat.stderr
error: expected pattern, found keyword `extern`
  --> $DIR/keyword-extern-as-identifier-pat.rs:2:9
   |
LL |     let extern = 0;
   |         ^^^^^^ expected pattern

error: aborting due to previous error

