src/test/ui/keyword/extern/keyword-extern-as-identifier-pat.rs
fn main() {
    let extern = 0; //~ ERROR expected pattern, found keyword `extern`
}
